--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "confidence": "^1.2.0",
     "knex": "^0.8.6",
     "bookshelf": "^0.8.2",
-    "lodash": "^3.10.0"
+    "lodash": "^3.10.0",
+    "pg": "^4.4.1"
   },
   "devDependencies": {
     "tape": "~2.4.0"
